Async configuration separated
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/data_plane/config_async.yaml
+++ b/cmd/data_plane/config_async.yaml
@@ -6,9 +6,11 @@ portProxyRead: "8082"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
-async: true
-persistRequests: true
-numberRetries: 3
+async:
+  enabled: true
+  persistRequests: true
+  numberRetries: 3
+  requestBufferSize: 1000
 
 redis:
   address: "127.0.0.1:6379"
