--- a/cmd/data_plane/config_cluster_async.yaml
+++ b/cmd/data_plane/config_cluster_async.yaml
@@ -6,9 +6,11 @@ portGRPC: "8081"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
-async: true
-persistRequests: false
-numberRetries: 3
+async:
+  enabled: true
+  persistRequests: true
+  numberRetries: 3
+  requestBufferSize: 1000
 
 redis:
   address: "10.0.1.2:6379"
