--- a/cmd/data_plane/config_raft.yaml
+++ b/cmd/data_plane/config_raft.yaml
@@ -6,9 +6,11 @@ portProxyRead: "8082"
 verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
-async: false
-persistRequests: false
-numberRetries: 3
+async:
+  enabled: false
+  persistRequests: false
+  numberRetries: 3
+  requestBufferSize: 1000
 
 redis:
   address: "127.0.0.1:6379"
