--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -3,6 +3,7 @@ controlPlaneAddress: "127.0.0.1:9090"
 port: "10010"
 verbosity: "trace"
 criType: "containerd"
+cpuConstaint: false
 
 containerd:
   criPath: "/run/containerd/containerd.sock"
