--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -3,6 +3,7 @@ controlPlaneAddress: "10.0.1.2:9090"
 port: "10010"
 verbosity: "trace"
 criType: "containerd"
+cpuConstaint: false
 
 containerd:
   criPath: "/run/containerd/containerd.sock"
