Recovery of Dirigent/Dandelion integration. Not tested code yet.
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -4,7 +4,7 @@ registrationServer: "10.0.1.2:9091"
 registrationServerReplicas: ""
 verbosity: "trace"
 traceOutputFolder: "data"
-placementPolicy: "random"
+placementPolicy: "dandelion"
 persistence: false
 reconstruct: false
 autoscaler: "default"
