--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -18,3 +18,6 @@ firecracker:
   VMDebugMode: false
   UseSnapshots: true
   NetworkPoolSize: 128
+
+dandelion:
+  binaryPath: "configs/dandelion/test_sysld_wasm_x86_64_matmul"
