--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -2,7 +2,7 @@ workerNodeIp: "127.0.0.1"
 controlPlaneAddress: "127.0.0.1:9090"
 port: "10010"
 verbosity: "trace"
-criType: "containerd"
+criType: "dandelion"
 cpuConstaint: false
 
 containerd:
@@ -20,4 +20,4 @@ firecracker:
   NetworkPoolSize: 128
 
 dandelion:
-  binaryPath: "configs/dandelion/test_sysld_wasm_x86_64_matmul"
+  binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
