Dandelion busy loop working
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -20,4 +20,7 @@ firecracker:
   NetworkPoolSize: 128
 
 dandelion:
-  binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
+  binaryPath: "configs/dandelion/sysld_wasm_x86_64_busy_loop"
+  engineType: "Process"
+  #binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
+  #engineType: "RWasm"
