--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -20,4 +20,5 @@ firecracker:
   NetworkPoolSize: 256
 
 dandelion:
-  binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
+  binaryPath: "/cluster_manager/configs/dandelion/sysld_wasm_x86_64_busy_loop"
+  engineType: "Process"
