--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -2,7 +2,7 @@ workerNodeIp: "dynamic"
 controlPlaneAddress: "10.0.1.2:9090"
 port: "10010"
 verbosity: "trace"
-criType: "containerd"
+criType: "dandelion"
 cpuConstaint: false
 
 containerd:
