Dandelion daemon port configurable
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -21,6 +21,7 @@ firecracker:
 
 dandelion:
   binaryPath: "configs/dandelion/sysld_wasm_x86_64_busy_loop"
+  daemonPort: 8082
   engineType: "Process"
   #binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
   #engineType: "RWasm"
