--- a/cmd/master_node/config_cluster_raft_1.yaml
+++ b/cmd/master_node/config_cluster_raft_1.yaml
@@ -10,6 +10,7 @@ reconstruct: true
 autoscaler: "default"
 autoscalingPeriod: "2s"
 defaultWFPartitionMethod: "fullPartition"
+imageStorage: "default"
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
