--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -4,7 +4,7 @@ registrationServer: "127.0.0.1:9091"
 registrationServerReplicas: ""
 verbosity: "trace"
 traceOutputFolder: "data"
-placementPolicy: "dandelion"
+placementPolicy: "random"
 persistence: false
 reconstruct: false
 autoscaler: "default"
@@ -16,7 +16,7 @@ loadBalancerAddress: "127.0.0.1:8079"
 removeWorkerNode: false
 removeDataplane: false
 
-precreateSnapshots: true
+precreateSnapshots: false
 
 redis:
   address: "127.0.0.1:6379"
