--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -2,7 +2,7 @@ workerNodeIp: "127.0.0.1"
 controlPlaneAddress: "127.0.0.1:9090"
 port: "10010"
 verbosity: "trace"
-criType: "dandelion"
+criType: "containerd"
 cpuConstaint: false
 
 containerd:
@@ -17,7 +17,7 @@ firecracker:
   ExposedIPPrefix: "192.254"
   VMDebugMode: false
   UseSnapshots: true
-  NetworkPoolSize: 128
+  NetworkPoolSize: 4
 
 dandelion:
   daemonPort: 8082
