--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -2,7 +2,7 @@ workerNodeIp: "127.0.0.1"
 controlPlaneAddress: "127.0.0.1:9090"
 port: "10010"
 verbosity: "trace"
-criType: "firecracker"
+criType: "containerd"
 cpuConstaint: false
 
 containerd:
