--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -11,3 +11,6 @@ DAEMONS_PER_NODE=1
 
 # Firecracker version - for Linux 4.14 use v1.7.0; To use latest Firecracker set to ""
 FIRECRACKER_VERSION="v1.7.0"
+# Local directory with Dandelion for finding the current remote tracking branch
+# Set to an empty string if you do not wish to clone Dandelion.
+DANDELION_DIR=$HOME/projects/dandelion
