Runtime selection script
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -6,3 +6,6 @@ DATA_PLANE_REPLICAS=1
 # Fake worker node experiment - enable = 1; disable = 0
 FAKE_WORKER_MODE=0
 DAEMONS_PER_NODE=1
+
+# Choose from [containerd, firecracker]
+WORKER_RUNTIME="firecracker"
