--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -8,4 +8,4 @@ FAKE_WORKER_MODE=0
 DAEMONS_PER_NODE=1
 
 # Choose from [containerd, firecracker]
-WORKER_RUNTIME="firecracker"
+WORKER_RUNTIME="containerd"
