--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -8,3 +8,6 @@ ASYNC_DP_MODE=0
 # Fake worker node experiment - enable = 1; disable = 0
 FAKE_WORKER_MODE=0
 DAEMONS_PER_NODE=1
+
+# Firecracker version - for Linux 4.14 use v1.7.0; To use latest Firecracker set to ""
+FIRECRACKER_VERSION="v1.7.0"
