--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 configs/dandelion/sysld_wasm_x86_64_busy_loop filter=lfs diff=lfs merge=lfs -text
 configs/dandelion/sysld_wasm_x86_64_matmul filter=lfs diff=lfs merge=lfs -text
+configs/dandelion/test_elf_mmu_x86_64_busy filter=lfs diff=lfs merge=lfs -text
