--- a/cmd/master_node/config.yaml
+++ b/cmd/master_node/config.yaml
@@ -9,6 +9,7 @@ persistence: false
 reconstruct: false
 autoscaler: "default"
 autoscalingPeriod: "2s"
+defaultWFPartitionMethod: "fullPartition"
 
 # to use HAProxy load balancer put 127.0.0.1:8079, otherwise leave blank
 loadBalancerAddress: "127.0.0.1:8079"
