--- a/cmd/data_plane/config_1.yaml
+++ b/cmd/data_plane/config_1.yaml
@@ -7,6 +7,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "random"
 workflowDefaultScheduler: "concurrentFifo"
+workflowPreferredWorkerParallelism: 4
 async:
   enabled: false
   persistRequests: false
