--- a/cmd/data_plane/config_cluster_async.yaml
+++ b/cmd/data_plane/config_cluster_async.yaml
@@ -7,6 +7,7 @@ verbosity: "trace"
 traceOutputFolder: "data"
 loadBalancingPolicy: "knative"
 workflowDefaultScheduler: "concurrentFifo"
+workflowPreferredWorkerParallelism: 4
 async:
   enabled: true
   persistRequests: true
