HAProxy per-request body buffer size
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -4,6 +4,8 @@ global
     daemon
     stats socket /run/haproxy/admin.sock mode 660 level admin
     maxconn 60000
+    # 128 MB per POST request body; otherwise 16 kB
+    #tune.bufsize 13421772
 
 defaults
     mode                    http
