--- a/cmd/worker_node/config_cluster_fake_worker_raft.yaml
+++ b/cmd/worker_node/config_cluster_fake_worker_raft.yaml
@@ -3,7 +3,7 @@ controlPlaneAddress: "10.0.1.2:9090,10.0.1.3:10000,10.0.1.4:10001"
 port: "$DAEMON_PORT"
 verbosity: "trace"
 criType: "scalability_test"
-cpuConstaint: false
+cpuConstraints: false
 
 containerd:
   criPath: "/run/containerd/containerd.sock"
