CNI config dynamic CIDR substitution - still at 100.22.0.0/16
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/configs/cni.conf
+++ b/configs/cni.conf
@@ -7,7 +7,7 @@
   "ipMasq": true,
   "ipam": {
     "type": "host-local",
-    "subnet": "100.22.0.0/16",
+    "subnet": "$SUBNET",
     "routes": [
       { "dst": "0.0.0.0/0" }
     ]
