Dynamic CIDR allocation
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/master_node/config_cluster.yaml
+++ b/cmd/master_node/config_cluster.yaml
@@ -11,6 +11,7 @@ autoscaler: "default"
 autoscalingPeriod: "2s"
 defaultWFPartitionMethod: "fullPartition"
 imageStorage: "default"
+cidr: "dynamic"
 
 # to use HAProxy load balancer put 10.0.1.254:8079, otherwise leave blank
 loadBalancerAddress: "10.0.1.254:8079"
