--- a/configs/cni.conf
+++ b/configs/cni.conf
@@ -2,7 +2,7 @@
   "cniVersion": "0.3.1",
   "name": "mynet",
   "type": "bridge",
-  "bridge": "cni0",
+  "bridge": "$BRIDGE_NAME",
   "isGateway": true,
   "ipMasq": true,
   "ipam": {
