Bugfixes to get workflows running again (#254)
* Bugfixes to get workflows running again, added config parameter to get stdio output from dandelion runtime.
* Workflow partitioning bugfix.
* Better config parameter naming

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -24,3 +24,4 @@ dandelion:
   engineType: "Process"
   #binaryPath: "configs/dandelion/sysld_wasm_x86_64_matmul"
   #engineType: "RWasm"
+  logFunctionStdioOutset: false
