--- a/configs/haproxy.cfg
+++ b/configs/haproxy.cfg
@@ -5,7 +5,7 @@ global
     stats socket /run/haproxy/admin.sock mode 660 level admin
     maxconn 60000
     # 128 MB per POST request body; otherwise 16 kB
-    #tune.bufsize 13421772
+    tune.bufsize 13421772
 
 defaults
     mode                    http
