Firecracking logging improvement on WN
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config_cluster.yaml
+++ b/cmd/worker_node/config_cluster.yaml
@@ -15,8 +15,8 @@ firecracker:
   FileSystem: "/cluster_manager/configs/firecracker/rootfs.ext4"
   InternalIPPrefix: "100"
   VMDebugMode: false
-  UseSnapshots: true
-  NetworkPoolSize: 128
+  UseSnapshots: false
+  NetworkPoolSize: 0
 
 dandelion:
   daemonPort: 8080
