Reverting Transport to HTTP/1
Signed-off-by: Lazar Cvetković <l.cvetkovic.997@gmail.com>

--- a/cmd/worker_node/config.yaml
+++ b/cmd/worker_node/config.yaml
@@ -2,7 +2,7 @@ workerNodeIp: "127.0.0.1"
 controlPlaneAddress: "127.0.0.1:9090"
 port: "10010"
 verbosity: "trace"
-criType: "containerd"
+criType: "firecracker"
 cpuConstraints: false
 
 containerd:
@@ -12,7 +12,7 @@ containerd:
 
 firecracker:
   Kernel: "configs/firecracker/vmlinux-4.14.bin"
-  FileSystem: "configs/firecracker/rootfs.ext4"
+  FileSystem: "configs/firecracker/rootfs_cpp.ext4"
   InternalIPPrefix: "100"
   VMDebugMode: false
   UseSnapshots: true
