--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -10,7 +10,7 @@ FAKE_WORKER_MODE=0
 DAEMONS_PER_NODE=1
 
 # Firecracker version - for Linux 4.14 use v1.7.0; To use latest Firecracker set to ""
-FIRECRACKER_VERSION="v1.7.0"
+FIRECRACKER_VERSION="v1.5.0"
 # Local directory with Dandelion for finding the current remote tracking branch
 # Set to an empty string if you do not wish to clone Dandelion.
 DANDELION_DIR="" # $HOME/projects/dandelion
@@ -18,4 +18,4 @@ DANDELION_DIR="" # $HOME/projects/dandelion
 # Select the runtime to use: containerd, firecracker, dandelion, fcctr.
 # This should match criType in the worker node configuration, and determines
 # which tools to install during setup.
-RUNTIME="containerd"
+RUNTIME="firecracker"
