--- a/scripts/setup.cfg
+++ b/scripts/setup.cfg
@@ -13,9 +13,9 @@ DAEMONS_PER_NODE=1
 FIRECRACKER_VERSION="v1.7.0"
 # Local directory with Dandelion for finding the current remote tracking branch
 # Set to an empty string if you do not wish to clone Dandelion.
-DANDELION_DIR="" # $HOME/projects/dandelion
+DANDELION_DIR="$HOME/projects/dandelion"
 
 # Select the runtime to use: containerd, firecracker, dandelion, fcctr.
 # This should match criType in the worker node configuration, and determines
 # which tools to install during setup.
-RUNTIME="containerd"
+RUNTIME="dandelion"
